# TAI_P2

./: README.md
C/: README.md  fcm  makefile  meta  meta.c  meta_debug
cpp/: README.md  makefile  meta  meta.cpp  meta_debug
java/: README.md  dependency-reduced-pom.xml  pom.xml
progression/: NC_001348.1 Human herpesvirus 3, complete genome.txt  NC_001348.1_Human_herpesvirus_3,_complete_genome.txt  NC_005831.2 Human Coronavirus NL63, complete genom.txt  NC_005831.2_Human_Coronavirus_NL63,_complete_genom.txt  NC_029618.1 Lake Sarah-associated circular molecul.txt  NC_029618.1_Lake_Sarah-associated_circular_molecul.txt  OR353425.1 Octopus vulgaris mitochondrion, complet.txt  OR353425.1_Octopus_vulgaris_mitochondrion,_complet.txt  Super ISS Si1240.txt  Super MUL 720.txt  Super_ISS_Si1240.txt  Super_MUL_720.txt  gi_1003725824_ref_NC_029621.1_ Lake Sarah-associat.txt  gi_1003725824_ref_NC_029621.1__Lake_Sarah-associat.txt  gi_1003725912_ref_NC_029632.1_ Lake Sarah-associat.txt  gi_1003725912_ref_NC_029632.1__Lake_Sarah-associat.txt  gi_1003725989_ref_NC_029640.1_ Lake Sarah-associat.txt  gi_1003725989_ref_NC_029640.1__Lake_Sarah-associat.txt  gi_19919965_ref_NC_003508.1_ Beet soil-borne mosai.txt  gi_19919965_ref_NC_003508.1__Beet_soil-borne_mosai.txt  gi_20428608_ref_NC_003769.1_ Rice ragged stunt vir.txt  gi_20428608_ref_NC_003769.1__Rice_ragged_stunt_vir.txt  gi_20806045_ref_NC_003847.1_ Panicum mosaic satell.txt  gi_20806045_ref_NC_003847.1__Panicum_mosaic_satell.txt  (+16 more)
python/: README.md  meta.py  (+3 more)
rust/metaclass/: Cargo.toml  README.md
rust/metaclass/src/: main.rs
(+31 files in other folders)
