[package]
name = "sequence_similarity"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation for calculating sequence similarity using Normalized Relative Compression (NRC)."
license = "MIT"

# Add more metadata as needed

[dependencies]
clap = { version = "4.0", features = ["derive"] } # For command-line argument parsing
colored = "2.0" # For colored terminal output
indicatif = "0.17" # For progress bars
rayon = "1.7" # For parallel processing
chrono = "0.4" # For timestamping logs
anyhow = "1.0" # For error handling

[dev-dependencies]
criterion = "0.4" # For benchmarking (optional)

[profile.release]
lto = true # Link-time optimization for release builds
codegen-units = 1 # Optimize for performance